--- a/style.css
+++ b/style.css
@@ -2,17 +2,18 @@ body {
     font-family: 'Oswald', sans-serif;
     margin: 0;
     padding: 0;
-    height: 100vh;
     box-sizing: border-box;
     background-color: #f0f0f0;
     transition: background-image 0.5s ease-in-out;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(sky.jpg);
+    background-image: url('sky.jpg');
+    background-attachment: fixed;
+    min-height: 100vh; /* Ensure the body covers the full viewport height */
 }
 
 header {
-    background-color:#6494ed65;
+    background-color: #6494ed65;
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -51,7 +52,7 @@ main {
     cursor: pointer;
 }
 
-searchBox #searchButton:hover {
+.searchBox #searchButton:hover {
     background-color: #555;
 }
 
